# bluetooth-auth

./: .gitignore  AUTO-CONNECT-EVENT-DRIVEN-PLAN.md  LICENSE  POLKIT-SECRET-GROUP.md  POLKIT-SECRET-GROUP.zh-CN.md  README.md  README.zh-CN.md  TUIGREET-BLUETOOTH-ENDPOINTS.md  TUIGREET-BLUETOOTH-ENDPOINTS.zh-CN.md  flake.nix  package.nix  pyproject.toml  renovate.json  result
.github/workflows/: ci.yml
modules/nixos/: auto-connect.nix  auto-lock.nix  bluetooth-auth.nix  greetd-auth.nix  locker-auth.nix  noctalia-lock.nix  polkit-auth.nix  settings-file.nix  sudo-auth.nix
src/bluetooth_auth/: __init__.py  auto_connect.py  auto_lock.py  bluetooth_device.py  config.json  oneshot_auth.py  session.py  settings.json  sudo_auth.py
