[project]
name = "bluetooth-auth"
version = "0.1.0"
description = "Small BlueZ D-Bus helpers for Bluetooth auth workflows"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "dbus-fast>=4.0.4,<6",
]

[project.scripts]
bluetooth-auth-auto-connect = "bluetooth_auth.auto_connect:main"
bluetooth-auth-auto-lock = "bluetooth_auth.auto_lock:main"
bluetooth-auth-sudo-auth = "bluetooth_auth.sudo_auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bluetooth_auth"]

[tool.hatch.build.targets.sdist]
include = [
    "/pyproject.toml",
    "/README.md",
    "/src/bluetooth_auth",
]
